# cg-bot-template

./: CMakeLists.txt  vs_wsl_setup.bat  vs_wsl_setup.sh
code/: .gitignore  CMakeLists.txt  CMakePresets.json
code/BotApp/: Bot.cpp  CMakeLists.txt  Optimizations.h
code/BotApp_Packed/: .gitignore  BotPacked.cpp  CMakeLists.txt  packer.sh
code/BotCore/: BotCore_PCH.h  CMakeLists.txt
code/BotCore_Test/: CMakeLists.txt  main.cpp
